# ChangeLog for media-sound/qmpdclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/ChangeLog,v 1.99 2013/07/18 22:09:07 creffett Exp $

  18 Jul 2013; Chris Reffett <creffett@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  Convert base_src_prepare to cmake-utils_src_prepare, bug 477232.

  10 Jul 2013; Patrick Lauer <patrick@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  Fixing qtgui deps for qt-4.8.5

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  Move Qt dependencies to the new category

  20 Jul 2012; Christoph Mende <angelos@gentoo.org> -qmpdclient-9999.ebuild:
  Move live ebuild to mpd overlay

  10 Jul 2012; Christoph Mende <angelos@gentoo.org>
  -files/qmpdclient-1.2.1-explicit-link.patch, -qmpdclient-1.1.3.ebuild,
  -qmpdclient-1.2.1.ebuild, -qmpdclient-1.2.2.ebuild:
  Remove old

  10 Jul 2012; Brent Baude <ranger@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  Marking qmpdclient-1.2.2-r1 ppc for bug 424511

  05 Jul 2012; Agostino Sarubbo <ago@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  Stable for amd64, wrt bug #424503

  02 Jul 2012; Jeff Horelick <jdhore@gentoo.org> qmpdclient-1.2.2-r1.ebuild:
  marked x86 per bug 424511

*qmpdclient-1.2.2-r1 (02 Jul 2012)

  02 Jul 2012; Christoph Mende <angelos@gentoo.org>
  +files/qmpdclient-1.2.2-qt48.patch, +qmpdclient-1.2.2-r1.ebuild:
  Apply patch for Qt-4.8 (bug #418937 by Kent Fredric)

  29 May 2012; Brent Baude <ranger@gentoo.org> qmpdclient-1.2.2.ebuild:
  Marking qmpdclient-1.2.2 ppc for bug 400407

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> qmpdclient-1.2.2.ebuild:
  x86 stable wrt bug #400407

  26 Jan 2012; Markos Chandras <hwoarang@gentoo.org> qmpdclient-1.2.2.ebuild:
  Stable on amd64 wrt bug #400407

  05 Jan 2012; Michael Weber <xmw@gentoo.org> qmpdclient-1.2.1.ebuild:
  ppc stable (bug 359477)

*qmpdclient-1.2.2 (15 Jun 2011)
