@@ -3,15 +3,23 @@ Hash: SHA256
 
 AUX qmpdclient-1.2.2-qt48.patch 1484 SHA256 36cbccd5058fcf8a4f23d5e49f8638bf173465fd6c3bf39c00db617abb5270f3 SHA512 5674b1de888f9ed03eb83be471b2f03ccf7a5e463c9c0056d1b276f7ed7bec73a3d4340131cb10a03f8f5cbbfe0b40694c213b6a3d8e90bb6da96c829ea03394 WHIRLPOOL a0ab1b846f1286f7a3c969d528bc0b86a2401db6e03c42774802cebfdb046b1efe52f866971c0257aa30ed23f51af38afd1afce0eda56ff59a5dfa5f9c4773c1
 DIST qmpdclient-1.2.2.tar.bz2 271565 SHA256 ed65705eaae8fb10fdce34ce20e010757a87423c2874479e1466e4368a866289 SHA512 2ae8a2235640c0c644f32290a9d39bcef6f041bb7eca1d269b54433975578c31067f2e5a28d9d679c229075962523b6b20e779b1ed23af7c47129ff4b63e5735 WHIRLPOOL e52e5b99892cc7b475f1c1b26a514b8125d704c83fef02b140307536acad45a94bdc4fe59adbec289d379cd599f4748452f17c5345b166ab443defbfcfeb0460
-EBUILD qmpdclient-1.2.2-r1.ebuild 1019 SHA256 ffd77ef69a72b0144f7d06f537c2d6c42531b79e71455350524b6d8914058716 SHA512 03fceece2a24c653c3abaf2202d80725e0a719d2b1a3607e325c926951327d1d1b5e5fcdcefd1069565e9662952981abd7466d3cb073d2b177a8c80760046903 WHIRLPOOL 79bc659f47ebfe0c3a112f62c43c91da7d49a50fe9f53b7114b88925e758518c4f8eee53610fdaa158b820d31c4b892f3ec9bba0e218edf53f8b6fd1cebcda4e
-MISC ChangeLog 14327 SHA256 46739fef8b1ab4dcfa97446ce7265d623ee381290c547ac2a17aedf54808c877 SHA512 f3cb6e22533ea39b526de9418a074c82befa11abf0d111fe7a7c556d192b574f8ebe0430279f734d26615a5d05ea3cd6ab3b7a3fe553b83441bba9c1c7014761 WHIRLPOOL a4f66bfe70ccad338434c3ff9334954ed5f509b2ce63e5ab114d5d047229d3c5b7afd6747278704b11e2201baef140be0565c0a7635f7f79db3bad0e88a66ad1
+EBUILD qmpdclient-1.2.2-r1.ebuild 1023 SHA256 dfa6bb88d69e39385b048403133823d0944f155d45f7f72ca38b01e52435258e SHA512 a16a70381e52fb64a46ce8dba2b18dc8355bdc9b33ee426c91ddb0f4f04be7a13dbf46093f970e9d88871b5c33a800017623cb00444faab9ecbb6c7dc58beedd WHIRLPOOL 60dc4d7675d2057c2bdec45f8ba8a2acc811cabe7390a491046457e4652e3e68debe896bfd307c202f5d42593836fe98fc9c563fccbee8d1f94860b013d73ab8
+MISC ChangeLog 14452 SHA256 f36fffe04088bca82e078052d8f63fb269ed1607efe51a6e0f39e71962e26188 SHA512 7c75fe9185c0b8787d3b1cb2a309a1928ee0c86b967ded482aced26dda628a74c739284317b9de1aa630bea062328cee0a7de64578c2209b1af233e46a457acd WHIRLPOOL 933ae6a0bb8817d37fd5285be0baea86f9227958133a5d198fa2c936753cbc360d342d04ee05662eb2a9b3e4cca3c625b63ccc83978c7d47a8cc7f09a2986137
 MISC metadata.xml 354 SHA256 3a04edf3735f2f0f9aec88b1622b478a17bdbf51c982b565230d7c88dd2044d0 SHA512 839d1da843ddc6f965ce99b7904c0d034ce527d758dff3484181fb7000f6f1f87e827f08a87a31acb42f14380667d401da72c7fe28e2c59aebf430afa09c910e WHIRLPOOL 5642429930369491cc2af1aa0b3e916b6ed5c2d2969229fd09af060a954992bc3e3898617b6b708e269fe7a1fe9fa66850c80210e58a26629c469b11e429c981
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iKYEAREIAGYFAlHoZ3tfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
-Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1RvIgCaAue2PvZuB8+RxDtLloKVsp9Q
-9AEAnjOhx2Qly0U05JdnKJkej0xtGmdX
-=a8Dq
+iQIcBAEBCAAGBQJSSz3uAAoJENXLsxwXqFxyfVgP/A2fYyxA9pU8961ElyQyz9oi
+cECc+z/I2qbAYzAkPInwak/rGoPTzo0s70fV8nnhufBSf7b263SmnJ+nH879sVsT
+BgRBE/+HtkZAB8f2nagmUgm+Kn9oG/F0nOo4uxg5l4I01vYKDoM/OWW0E6tGtbpi
+G27n+kBe1CqJYSH8kPJpUoE4OzagGDZHb6QPGV91kdcp3t5STTJEIleBP8jdyXnp
+NgvFnWZE0vTish+iQfoXwGCMKjU/1+cNk+obDPsM5Qh2woeKDLNMz14t3v7xTfls
+uHRrNofmxm4tGTJqUmVfAzSAHkmDNq80vaFH8gFIJB7lJrg4KE52OfIi0TA7AS/3
+J0Kf1PI1OIvuznKa4tHGGW0o0ksG0jU/c/OZD1mll7fg86xds2ub14q+Nq4oHKwO
+oOFf8nSAu2sVBKcU2gYgZIZxms9jNxoovYflUlM4yfve/6GbuUpMyzwXa5GJsBAc
+KwO8u1SmQmwP6xsWVnYBmatbc9EJXjfRQfi7FuFBZV5g6gmypQKtJUh7vDvyVX0z
+c/UwcKr+v6k0u/z94UP6Q9yU/Vawhof+mHfPdq0rxRlHgNcleePKs2kq6/l/Q3dq
+Zp3qugFxJ2BQjdAO84xOiWrghFs9oGSJ2gWDMXen6wqRiROlqUnyXUszbhuUGhvH
+MWrGu/GvzGmI9f8Wte9a
+=5zfD
 -----END PGP SIGNATURE-----
