@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/qmpdclient-1.2.2-r1.ebuild,v 1.7 2013/07/18 22:09:07 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/qmpdclient-1.2.2-r1.ebuild,v 1.8 2013/10/01 21:26:03 pesa Exp $
 
 EAPI=4
 inherit fdo-mime cmake-utils
@@ -15,7 +15,8 @@ KEYWORDS=""
 KEYWORDS="amd64 ppc x86"
 IUSE="debug"
 
-DEPEND="dev-qt/qtgui:4[dbus(+)]
+DEPEND="dev-qt/qtdbus:4
+	dev-qt/qtgui:4
 	dev-qt/qtwebkit:4
 	dev-qt/qtxmlpatterns:4"
 RDEPEND="${DEPEND}"
